[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/buttons/python_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/buttons/16x16 Control Buttons (2).png" type="Texture" id=2]
[ext_resource path="res://assets/Menu_Sounds_Free/Menu_Sound_Hover.wav" type="AudioStream" id=3]
[ext_resource path="res://GUI/Worlds.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Squares.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/Rocky Roads/coin.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/SPACEALTERNATIVE.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/Fondo.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/Pause button Gray.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ), SubResource( 2 ), SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=15]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 14
outline_size = 8
outline_color = Color( 0.74902, 0.47451, 0.113725, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=14]
size = 6
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 67, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 67, 0, 67, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "space",
"speed": 2.0
} ]

[sub_resource type="Animation" id=12]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Node2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -600, 0 ), Vector2( 600, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 600, 0 ), Vector2( -600, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="Worlds" type="Control" groups=["worlds"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Node2D" type="Node2D" parent="CanvasLayer"]

[node name="menu" type="Node2D" parent="CanvasLayer/Node2D"]

[node name="back" type="AnimatedSprite" parent="CanvasLayer/Node2D/menu"]
position = Vector2( 520, 300 )
scale = Vector2( 3, 3 )
frames = SubResource( 6 )

[node name="menu_txt" type="Label" parent="CanvasLayer/Node2D/menu"]
margin_left = 464.967
margin_top = 376.566
margin_right = 578.967
margin_bottom = 412.566
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "BACK"

[node name="worlds" type="Node2D" parent="CanvasLayer/Node2D"]

[node name="fondo" type="Sprite" parent="CanvasLayer/Node2D/worlds"]
position = Vector2( 513.067, 278.027 )
scale = Vector2( 11.7872, 11.378 )
texture = ExtResource( 8 )

[node name="icon" type="Sprite" parent="CanvasLayer/Node2D/worlds"]
position = Vector2( 627.49, 229.909 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
hframes = 4

[node name="world" type="Label" parent="CanvasLayer/Node2D/worlds"]
margin_left = 219.251
margin_top = 180.522
margin_right = 561.251
margin_bottom = 283.522
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin" type="Sprite" parent="CanvasLayer/Node2D/worlds"]
position = Vector2( 451.331, 353.861 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
hframes = 4

[node name="score" type="Label" parent="CanvasLayer/Node2D/worlds"]
margin_left = 492.301
margin_top = 335.447
margin_right = 532.301
margin_bottom = 371.447
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="min_score" type="Label" parent="CanvasLayer/Node2D/worlds"]
margin_left = 612.675
margin_top = 350.528
margin_right = 757.675
margin_bottom = 372.528
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Min 70/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bloqueo" type="ColorRect" parent="CanvasLayer"]
margin_left = 216.0
margin_top = 128.0
margin_right = 808.0
margin_bottom = 439.0
color = Color( 0.0470588, 0.027451, 0.027451, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="Sprite" parent="CanvasLayer"]
position = Vector2( 900, 300 )
scale = Vector2( 6, 7 )
texture = ExtResource( 2 )

[node name="left" type="Sprite" parent="CanvasLayer"]
position = Vector2( 124, 300 )
scale = Vector2( 6, 7 )
texture = ExtResource( 2 )
flip_h = true

[node name="keyboard" type="AnimatedSprite" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.745098 )
position = Vector2( 520, 520 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )
animation = "space"

[node name="slide" type="AnimationPlayer" parent="."]
anims/slide_left = SubResource( 12 )
anims/slide_rigth = SubResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="backgound" type="ColorRect" parent="."]
margin_right = 1027.0
margin_bottom = 603.0
color = Color( 0.788235, 0.788235, 0.788235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="slide" to="." method="_on_slide_animation_finished"]
[connection signal="animation_started" from="slide" to="." method="_on_slide_animation_started"]
